# glocal_exploration

./: .clang-format  .gitignore  README.md  glocal_https.rosinstall  glocal_ssh.rosinstall
glocal_exploration/: CMakeLists.txt  package.xml
glocal_exploration/include/glocal_exploration/: common.h
glocal_exploration/include/glocal_exploration/mapping/: map_base.h  map_interface.h  neighborhood_offsets.h
glocal_exploration/include/glocal_exploration/planning/: region_of_interest.h  state_machine.h  waypoint.h
glocal_exploration/include/glocal_exploration/planning/global/: global_planner_base.h  submap_frontier.h  submap_frontier_evaluator.h  submap_frontiers.h  wavefront_detector.h
glocal_exploration/include/glocal_exploration/planning/global_planner/: global_planner_base.h  submap_frontiers.h
glocal_exploration/include/glocal_exploration/planning/local/: lidar_model.h  local_planner_base.h  rh_rrt_star.h  sensor_model.h
glocal_exploration/include/glocal_exploration/planning/local_planner/: lidar_model.h  local_planner_base.h  rh_rrt_star.h  sensor_model.h
glocal_exploration/include/glocal_exploration/state/: communicator.h  region_of_interest.h  state_machine.h  waypoint.h
glocal_exploration/include/glocal_exploration/utility/: config_checker.h
glocal_exploration/include/glocal_exploration/utils/: execute_on_scope_exit.h  frame_transformer.h  set_utils.h
glocal_exploration/src/mapping/: map_base.cpp
glocal_exploration/src/planning/: region_of_interest.cpp  state_machine.cpp
glocal_exploration/src/planning/global/: submap_frontier.cpp  submap_frontier_evaluator.cpp  submap_frontiers.cpp  wavefront_detector.cpp
glocal_exploration/src/planning/global/skeleton/: skeleton_a_star.cpp
glocal_exploration/src/planning/global_planner/: submap_frontiers.cpp
glocal_exploration/src/planning/local/: lidar_model.cpp  rh_rrt_star.cpp
glocal_exploration/src/planning/local_planner/: lidar_model.cpp  rh_rrt_star.cpp
glocal_exploration/src/state/: communicator.cpp  region_of_interest.cpp  state_machine.cpp
glocal_exploration_ros/: CMakeLists.txt  package.xml
glocal_exploration_ros/app/: glocal_system_node.cpp
glocal_exploration_ros/app/experiments/: evaluation_manager.py  experiment_manager.py  kiwi_visualizer.py  path_visualizer.py  physical_experiment_manager.py  place_recognition_simulator.py  point_cloud_completer.py  voxblox_evaluation_node.cpp
glocal_exploration_ros/config/: active_3d_planner.yaml  gbplanner_config.yaml  gbplanner_voxblox_sim_config.yaml  glocal_planner.yaml  maze_airsim.yaml  maze_visualization.rviz  voxblox_ground_truth.yaml
glocal_exploration_ros/config/evaluation/: maze.yaml  tunnels.yaml
glocal_exploration_ros/config/experiments/general/drift/: drift_1.yaml  drift_2.yaml  drift_3.yaml  drift_4.yaml  drift_5.yaml  drift_6.yaml  drift_light.yaml  drift_moderate.yaml  drift_none.yaml
glocal_exploration_ros/config/experiments/general/voxblox/: active_3d.yaml  gbplanner.yaml  ground_truth.yaml
glocal_exploration_ros/config/experiments/kiwi/: glocal.yaml  glocal_replay.yaml  trajectory_adapter.yaml  trajectory_adaptor.yaml
glocal_exploration_ros/config/experiments/maze/: evaluation.yaml  place_recognition.yaml
glocal_exploration_ros/config/experiments/maze/planners/: active_3d.yaml  gbplanner.yaml  glocal.yaml
glocal_exploration_ros/config/experiments/tunnels/: evaluation.yaml  place_recognition.yaml
glocal_exploration_ros/config/maze/: .airsim_drift3.yaml  drift_2.yaml  drift_3.yaml  drift_4.yaml  drift_6.yaml  maze_airsim.yaml  maze_visualization.rviz  maze_visualization_active_3d.rviz  maze_visualization_gbplanner.rviz
glocal_exploration_ros/config/planners/: active_3d.yaml  gbplanner.yaml  glocal.yaml
glocal_exploration_ros/config/simulation/: airsim.yaml
glocal_exploration_ros/config/tunnels/: place_recognition_simulator.yaml
glocal_exploration_ros/config/visualization/: active_3d.rviz  gbplanner.rviz  glocal.rviz  replay_kiwi.rviz  replay_kiwi_garage.rviz
glocal_exploration_ros/config/voxblox/: active_3d.yaml  gbplanner.yaml
glocal_exploration_ros/include/glocal_exploration_ros/: glocal_system.h
glocal_exploration_ros/include/glocal_exploration_ros/conversions/: ros_component_factory.h  ros_node_handles.h  ros_params.h
glocal_exploration_ros/include/glocal_exploration_ros/mapping/: frame_transformer.h  set_utils.h  voxblox_map.h  voxgraph_local_area.h  voxgraph_map.h  voxgraph_spatial_hash.h
glocal_exploration_ros/include/glocal_exploration_ros/planners/: glocal_planner.h
glocal_exploration_ros/include/glocal_exploration_ros/planning/: glocal_planner.h
glocal_exploration_ros/include/glocal_exploration_ros/visualization/: global_planner_visualizer_base.h  local_planner_visualizer_base.h  rh_rrt_star_visualizer.h  skeleton_visualizer.h
glocal_exploration_ros/launch/: active_3d_run_maze.launch  evaluate_experiment.launch  experiment_replay.launch  gbplanner_run_maze.launch  glocal_video.launch  kiwi.launch  parse_maze_to_airsim.launch  record_active_3d_bag.launch  record_video_bag.launch  replay_experiment.launch  replay_kiwi.launch  run_active_3d.launch  run_gbplanner.launch  run_glocal.launch  run_maze.launch  video.launch
glocal_exploration_ros/scripts/: rosbag_record.sh  run_experiment_series.sh
glocal_exploration_ros/src/: glocal_system.cpp
glocal_exploration_ros/src/conversions/: ros_component_factory.cpp  ros_params.cpp
glocal_exploration_ros/src/experiments/: experiment_manager.py
glocal_exploration_ros/src/mapping/: voxblox_map.cpp  voxgraph_local_area.cpp  voxgraph_map.cpp  voxgraph_spatial_hash.cpp
glocal_exploration_ros/src/planners/: glocal_planner.cpp
glocal_exploration_ros/src/planning/: glocal_planner.cpp
glocal_exploration_ros/src/planning/global/: skeleton_a_star.cpp  skeleton_planner.cpp
glocal_exploration_ros/src/planning/global_planner/: skeleton_planner.cpp
glocal_exploration_ros/src/ros_nodes/: glocal_planner_node.cpp
glocal_exploration_ros/src/visualization/: rh_rrt_star_visualizer.cpp  skeleton_visualizer.cpp
(+16 files in other folders)
