<?xml version="1.0"?>
<package format="2">
  <name>glocal_exploration</name>
  <version>0.0.0</version>
  <description>Efficient local and global exploration on submap collections with changing past pose estimates. </description>

  <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>
  <author email="victor.reijgwart@mavt.ethz.ch">Victor Reijgwart</author>

  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="victor.reijgwart@mavt.ethz.ch">Victor Reijgwart</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>voxblox</depend>
  <depend>voxblox_skeleton</depend>
  <depend>cblox</depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <export>
  </export>
</package>
