<?xml version="1.0"?>
<package format="2">
  <name>glocal_exploration_ros</name>
  <version>0.0.0</version>
  <description>Efficient local and global exploration on submap collections with changing past pose estimates. </description>

  <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>
  <author email="victor.reijgwart@mavt.ethz.ch">Victor Reijgwart</author>

  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="victor.reijgwart@mavt.ethz.ch">Victor Reijgwart</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_skeleton</depend>
  <depend>voxgraph</depend>
  <depend>voxgraph_msgs</depend>

  <depend>glocal_exploration</depend>

  <export>
  </export>
</package>
